--- a/assets/client/css/default.css
+++ b/assets/client/css/default.css
@@ -1,7 +1,7 @@
 a 
 {
-	text-decoration: none;
-	color:#00207B;	
+    text-decoration: none;
+    color:#00207B;	
 }
 
 a:hover 
@@ -97,36 +97,45 @@ form {
     padding-right:10px;
 }
 
-.editContainer 
-{
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 3px;	
-    width:60px; 
-}
-
 .editLink 
 {
-	float:left;	
+    float:left;	
+}
+
+.editLineSpacing {
+    width: 300px;
+    padding: 5px 0px 5px 5px;
+}
+
+.editLinkContainer {
+    width: 85px;
+    xborder:1px solid #000;
+    margin: auto;
+}
+
+.editListContainer {
+    width: 400px;
 }
 
 .editRowStyle 
 {
-	background-color:#B0B0B0;
+    background-color:#B0B0B0;
 }
 
 .form_container 
 {
     margin-left: auto;
     margin-right: auto;
-    width: 900px;   
+    width: 660px;   
     text-align:center;
+    padding:20px 0px 20px 0px;
+    xborder:1px solid #000;
 }
 
 .form_row 
 {
     padding: 4px 0px 2px 0px;
-    width:550px;
+    xwidth:550px;
     margin-left: auto;
     margin-right: auto;	
     clear:both;			
@@ -185,13 +194,21 @@ form {
     width:150px;
 }
 
+.listAllLinkContainer 
+{
+    margin-left: auto;
+    margin-right: auto;
+    width: 80px;
+    xborder: 1px solid #000;
+}
+
 .logdate {
     display:none;
 }
 
-.mainBodyContainer 
+.xmainBodyContainer 
 {
-    width:1150px;	
+    width:1350px;	
     text-align:center;
     margin-left: auto;
     margin-right: auto;
@@ -210,9 +227,10 @@ form {
 
 .mainPageWidthAndHeight 
 {
-    width:1150px;
+    width:1350px;
+    height:900px;
     border: solid 1px #000;
-    height: 750px;
+    margin: auto;
     padding:0px 0px 0px 0px;	
     background-color: white;
 }
@@ -442,95 +460,96 @@ selectWidth
 
 .textAlignRight
 {
-	text-align:right;	
+    text-align:right;	
 }
 
 .textArea 
 {
-	font-family:verdana;
-	font-size:10px;		
-	border: solid 1px #000;
-	background-color:#C6DBFF;
-	background-color:#E7EFF7		
+    font-family:verdana;
+    font-size:10px;		
+    border: solid 1px #000;
+    background-color:#C6DBFF;
+    background-color:#E7EFF7		
 }
 
 .textBox, select
 {
-	border: solid 1px #000;
-	background-color:#C6DBFF;
-	background-color:#E7EFF7	
+    border: solid 1px #000;
+    background-color:#C6DBFF;
+    background-color:#E7EFF7;
+    padding: 2px 0px 2px 3px;    
 }
 
 .textBoxSearch
 {
-	border: solid 1px #000;	
-	background-color:#CCCCCC;	
+    border: solid 1px #000;	
+    background-color:#CCCCCC;	
 }
 
 .textSpacing 
 {
-	padding:3px 8px 0px 10px;
-	width:120px;
-	text-align:right;
-	float:left;	
-	background-color:Transparent;
+    padding:3px 8px 0px 10px;
+    width:130px;
+    text-align:right;
+    float:left;	
+    background-color:Transparent;
 }
 
 .totalsContainer 
 {
-	float:right;		
-	padding-right:7px;
+    float:right;		
+    padding-right:7px;
 }
 
 .toUpper 
 {
-	text-transform:uppercase;	
+    text-transform:uppercase;	
 }
 
 .validText 
 {
-	padding: 3px 0px 0px 5px;
-	float: left;		
+    padding: 3px 0px 0px 5px;
+    float: left;		
 }
 
 .viewCell1 
 {
-  text-align:right; 
-  width:500px; 
-  font-weight:bold;    	
+    text-align:right; 
+    width:500px; 
+    font-weight:bold;    	
 }
 
 .viewCell2
 {
-  text-align:left; 
-  width:500px;   
-  padding-right:50px    
+    text-align:left; 
+    width:500px;   
+    padding-right:50px    
 }
 
 viewContainer 
 {
-	width:900px;
-	text-align:center;	
-	border:solid 5px #000;
+    width:900px;
+    text-align:center;	
+    border:solid 5px #000;
 }
 
 .viewName 
 {
-	padding:3px 8px 0px 10px;
-	width:45%;
-	text-align:right;
-	float:left;	
-	background-color:Transparent;				
-	font-weight:bold;
+    padding:3px 8px 0px 10px;
+    width:45%;
+    text-align:right;
+    float:left;	
+    background-color:Transparent;				
+    font-weight:bold;
 }
 
 .viewValue 
 {
-	border:solid 1px #000;
-	padding:3px 0px 0px 0px;
-	width:50%;
-	text-align:left;
-	float:left;		
+    border:solid 1px #000;
+    padding:3px 0px 0px 0px;
+    width:50%;
+    text-align:left;
+    float:left;		
 }
 
 		
