--- a/assets/client/css/calendar.css
+++ b/assets/client/css/calendar.css
@@ -1,272 +1,86 @@
-/* The main calendar widget.  DIV containing a table. */
 
-.calendar {
-    position: relative;
-    display: none;
-    border-top: 2px solid #fff;
-    border-right: 2px solid #000;
-    border-bottom: 2px solid #000;
-    border-left: 2px solid #fff;
-    font-size: 11px;
-    color: #000;
-    cursor: default;
-    background: #E7EFF7;
-    font-family: tahoma,verdana,sans-serif;
-}
-
-.calendar table {
-    border-top: 1px solid #000;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #000;
-    font-size: 11px;
-    color: #000;
-    cursor: default;
-    background: #ccc;
-    font-family: tahoma,verdana,sans-serif;
-}
-
-/* Header part -- contains navigation buttons and day names. */
-
-.calendar .button { /* "<<", "<", ">", ">>" buttons have this class */
-    text-align: center;
-    padding: 1px;
-    border-top: 1px solid #fff;
-    border-right: 1px solid #000;
-    border-bottom: 1px solid #000;
-    border-left: 1px solid #fff;
-}
-
-.calendar .nav {
-    background: transparent url(menuarrow.gif) no-repeat 100% 100%;
-}
-
-.calendar thead .title { /* This holds the current "month, year" */
-    font-weight: bold;
-    padding: 1px;
-    border: 1px solid #000;
-    background: #4A7DD6;
+/* main header */
+.ui-datepicker-header {
+    background: #3591D0;
     color: #fff;
-    text-align: center;
-}
-
-.calendar thead .headrow { /* Row <TR> containing navigation buttons */
-}
-
-.calendar thead .daynames { /* Row <TR> containing the day names */
-    color:#fff;
-}
-
-.calendar thead .name { /* Cells <TD> containing the day names */
-    border-bottom: 1px solid #000;
-    padding: 2px;
-    text-align: center;
-    background: #4A7DD6;
-}
-
-.calendar thead .weekend { /* How a weekend day name shows in header */
-    color: #fff;
-}
-
-.calendar thead .hilite { /* How do the buttons in header appear when hover */
-    border-top: 2px solid #fff;
-    border-right: 2px solid #000;
-    border-bottom: 2px solid #000;
-    border-left: 2px solid #fff;
-    padding: 0px;
-    background-color: #E7EFF7;
-}
-
-.calendar thead .active { /* Active (pressed) buttons in header */
-    padding: 2px 0px 0px 2px;
-    border-top: 1px solid #000;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #000;
-    background-color: #b8c4c0;
-}
-
-/* The body part -- contains all the days in month. */
-
-.calendar tbody .day { /* Cells <TD> containing month days dates */
-    width: 2em;
-    text-align: right;
-    padding: 2px 4px 2px 2px;
-}
-.calendar tbody .day.othermonth {
-    font-size: 80%;
-    color: #aaa;
-}
-.calendar tbody .day.othermonth.oweekend {
-    color: #faa;
-}
-
-.calendar table .wn {
-    padding: 2px 3px 2px 2px;
-    border-right: 1px solid #000;
-    background: #B4B4B4;
-}
-
-.calendar tbody .rowhilite td {
-    background: #E7EFF7;
-}
-
-.calendar tbody .rowhilite td.wn {
-    background: #E7EFF7;
-}
-
-.calendar tbody td.hilite { /* Hovered cells <TD> */
-    padding: 1px 3px 1px 1px;
-    border-top: 1px solid #fff;
-    border-right: 1px solid #000;
-    border-bottom: 1px solid #000;
-    border-left: 1px solid #fff;
-}
-
-.calendar tbody td.active { /* Active (pressed) cells <TD> */
-    padding: 2px 2px 0px 2px;
-    border-top: 1px solid #000;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #000;
-}
-
-.calendar tbody td.selected { /* Cell showing selected date */
     font-weight: bold;
-    border-top: 1px solid #000;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #000;
-    padding: 2px 2px 0px 2px;
+    font-size: 14px;
+    font-family:verdana;
+    -webkit-box-shadow: inset 0px 1px 1px 0px rgba(250, 250, 250, 2);
+    -moz-box-shadow: inset 0px 1px 1px 0px rgba(250, 250, 250, .2);
+    xbox-shadow: inset 0px 1px 1px 0px rgba(250, 250, 250, .2);
+    xtext-shadow: 1px -1px 0px #000;
+    xfilter: dropshadow(color=#000, offx=1, offy=-1);
+    xline-height: 30px;
+    border-width: 1px 0 0 0;
+    border-style: solid;
+    border-color: #111;
+}
+
+/* header months background */
+.ui-datepicker thead {
+    background-color: #ccc;
+    xbackground-image: -moz-linear-gradient(top,  #f7f7f7 0%, #f1f1f1 100%);
+    xbackground-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#f1f1f1));
+    xbackground-image: -webkit-linear-gradient(top,  #f7f7f7 0%,#f1f1f1 100%);
+    xbackground-image: -o-linear-gradient(top,  #f7f7f7 0%,#f1f1f1 100%);
+    xbackground-image: -ms-linear-gradient(top,  #f7f7f7 0%,#f1f1f1 100%);
+    xbackground-image: linear-gradient(top,  #f7f7f7 0%,#f1f1f1 100%);
+    xfilter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#f1f1f1',GradientType=0 );
+    border-bottom: 1px solid #bbb;
+}
+
+/* header months text */
+.ui-datepicker th {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 10pt;
+    padding: 5px 0px 5px 10px;
+    color: #666666;
+    xtext-shadow: 1px 0px 0px #fff;
+    xfilter: dropshadow(color=#fff, offx=1, offy=0);
+}
+
+.ui-datepicker-prev, .ui-datepicker-next {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    cursor: pointer;
+    xbackground: #fff;
+    xbackground-image: url('../img/arrow.png');
+    xbackground-repeat: no-repeat;
+    line-height: 600%;
+    overflow: hidden;
+}
+
+.ui-datepicker td span, .ui-datepicker td a {
+    xdisplay: inline-block;
+    xfont-weight: bold;
+    xtext-align: center;
+    xwidth: 30px;
+    xheight: 30px;
+    xline-height: 30px;
+    color: #666666;
+    xtext-shadow: 1px 1px 0px #fff;
+    xfilter: dropshadow(color=#fff, offx=1, offy=1);
+}
+
+/* button background */
+.ui-datepicker-calendar .ui-state-default {
     background: #E7EFF7;
+    xbackground: -moz-linear-gradient(top,  #ededed 0%, #dedede 100%);
+    xbackground: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ededed), color-stop(100%,#dedede));
+    xbackground: -webkit-linear-gradient(top,  #ededed 0%,#dedede 100%);
+    xbackground: -o-linear-gradient(top,  #ededed 0%,#dedede 100%);
+    xbackground: -ms-linear-gradient(top,  #ededed 0%,#dedede 100%);
+    xbackground: linear-gradient(top,  #ededed 0%,#dedede 100%);
+    xfilter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#dedede',GradientType=0 );
+    x-webkit-box-shadow: inset 1px 1px 0px 0px rgba(250, 250, 250, .5);
+    x-moz-box-shadow: inset 1px 1px 0px 0px rgba(250, 250, 250, .5);
+    xbox-shadow: inset 1px 1px 0px 0px rgba(250, 250, 250, .5);
 }
-
-.calendar tbody td.weekend { /* Cells showing weekend days */
-    color: #0D37A3;
-}
-
-.calendar tbody td.today { /* Cell showing today date */
-    font-weight: bold;
-    color: #00;
-}
-
-.calendar tbody .disabled { color: #999; }
-
-.calendar tbody .emptycell { /* Empty cells (the best is to hide them) */
-    visibility: hidden;
-}
-
-.calendar tbody .emptyrow { /* Empty row (some months need less than 6 rows) */
-    display: none;
-}
-
-/* The footer part -- status bar and "Close" button */
-
-.calendar tfoot .footrow { /* The <TR> in footer (only one right now) */
-}
-
-.calendar tfoot .ttip { /* Tooltip (status bar) cell <TD> */
-    background: #e8f4f0;
-    padding: 1px;
-    border: 1px solid #000;
-    background: #4A7DD6;
-    color: #fff;
-    text-align: center;
-}
-
-.calendar tfoot .hilite { /* Hover style for buttons in footer */
-    border-top: 1px solid #fff;
-    border-right: 1px solid #000;
-    border-bottom: 1px solid #000;
-    border-left: 1px solid #fff;
-    padding: 1px;
-    background: #E7EFF7;
-}
-
-.calendar tfoot .active { /* Active (pressed) style for buttons in footer */
-    padding: 2px 0px 0px 2px;
-    border-top: 1px solid #000;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #000;
-}
-
-/* Combo boxes (menus that display months/years for direct selection) */
-
-.calendar .combo {
-    position: absolute;
-    display: none;
-    width: 4em;
-    top: 0px;
-    left: 0px;
-    cursor: default;
-    border-top: 1px solid #fff;
-    border-right: 1px solid #000;
-    border-bottom: 1px solid #000;
-    border-left: 1px solid #fff;
-    background: #d8e4e0;
-    font-size: 90%;
-    padding: 1px;
-    z-index: 100;
-}
-
-.calendar .combo .label,
-.calendar .combo .label-IEfix {
-    text-align: center;
-    padding: 1px;
-}
-
-.calendar .combo .label-IEfix {
-    width: 4em;
-}
-
-.calendar .combo .active {
-    background: #c8d4d0;
-    padding: 0px;
-    border-top: 1px solid #000;
-    border-right: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #000;
-}
-
-.calendar .combo .hilite {
-    background: #048;
-    color: #aef;
-}
-
-.calendar td.time {
-    border-top: 1px solid #000;
-    padding: 1px 0px;
-    text-align: center;
-    background-color: #e8f0f4;
-}
-
-.calendar td.time .hour,
-.calendar td.time .minute,
-.calendar td.time .ampm {
-    padding: 0px 3px 0px 4px;
-    border: 1px solid #889;
-    font-weight: bold;
-    background-color: #fff;
-}
-
-.calendar td.time .ampm {
-    text-align: center;
-}
-
-.calendar td.time .colon {
-    padding: 0px 2px 0px 3px;
-    font-weight: bold;
-}
-
-.calendar td.time span.hilite {
-    border-color: #000;
-    background-color: #667;
-    color: #fff;
-}
-
-.calendar td.time span.active {
-    border-color: #f00;
-    background-color: #000;
-    color: #0f0;
+.ui-datepicker-unselectable .ui-state-default {
+    xbackground: #f4f4f4;
+    xcolor: #b4b3b3;
 }
